sorted out layout issues with login-header

--- a/app/assets/sass/land-registry-elements/_utilities.scss
+++ b/app/assets/sass/land-registry-elements/_utilities.scss
@@ -72,5 +72,5 @@
 .login-header {
   margin-top: 10px;
   font-size: 16px;
-  float: right;
+  text-align: right;
 }
